Use proper dashes

--- a/assets/ref_gk_rest.tex
+++ b/assets/ref_gk_rest.tex
@@ -51,7 +51,7 @@
 \eEasyList
 \subsubsection{{\bf Статья 26.} Дееспособность несовершеннолетних в возрасте от четырнадцати до восемнадцати лет}
 \beginEasyList
-& Несовершеннолетние в возрасте от четырнадцати до восемнадцати лет совершают сделки, за исключением названных в \uline{пункте 2} настоящей статьи, с письменного согласия своих законных представителей - родителей, усыновителей или попечителя.
+& Несовершеннолетние в возрасте от четырнадцати до восемнадцати лет совершают сделки, за исключением названных в \uline{пункте 2} настоящей статьи, с письменного согласия своих законных представителей --- родителей, усыновителей или попечителя.
 \par Сделка, совершенная таким несовершеннолетним, действительна также при ее последующем письменном одобрении его родителями, усыновителями или попечителем.
 & Несовершеннолетние в возрасте от четырнадцати до восемнадцати лет вправе самостоятельно, без согласия родителей, усыновителей и попечителя:
 && распоряжаться своими заработком, стипендией и иными доходами;
@@ -65,7 +65,7 @@
 \subsubsection{{\bf Статья 27.} Эмансипация}
 \beginEasyList
 & Несовершеннолетний, достигший шестнадцати лет, может быть объявлен полностью дееспособным, если он работает по трудовому договору, в том числе по контракту, или с согласия родителей, усыновителей или попечителя занимается предпринимательской деятельностью.
-\par Объявление несовершеннолетнего полностью дееспособным (эмансипация) производится по решению органа опеки и попечительства - с согласия обоих родителей, усыновителей или попечителя либо при отсутствии такого согласия - по решению суда.
+\par Объявление несовершеннолетнего полностью дееспособным (эмансипация) производится по решению органа опеки и попечительства --- с согласия обоих родителей, усыновителей или попечителя либо при отсутствии такого согласия --- по решению суда.
 & Родители, усыновители и попечитель не несут ответственности по обязательствам эмансипированного несовершеннолетнего, в частности по обязательствам, возникшим вследствие причинения им вреда.
 \eEasyList
 \subsubsection{{\bf Статья 28.} Дееспособность малолетних}
@@ -130,7 +130,7 @@
 \par Юридическое лицо, созданное в соответствии с настоящим Кодексом одним учредителем, действует на основании устава, утвержденного этим учредителем.
 & В учредительных документах юридического лица должны определяться наименование юридического лица, место его нахождения, порядок управления деятельностью юридического лица, а также содержаться другие сведения, предусмотренные законом для юридических лиц соответствующего вида. В учредительных документах некоммерческих организаций и унитарных предприятий, а в предусмотренных законом случаях и других коммерческих организаций должны быть определены предмет и цели деятельности юридического лица. Предмет и определенные цели деятельности коммерческой организации могут быть предусмотрены учредительными документами и в случаях, когда по закону это не является обязательным.
 \par В учредительном договоре учредители обязуются создать юридическое лицо, определяют порядок совместной деятельности по его созданию, условия передачи ему своего имущества и участия в его деятельности. Договором определяются также условия и порядок распределения между участниками прибыли и убытков, управления деятельностью юридического лица, выхода учредителей (участников) из его состава.
-& Изменения учредительных документов приобретают силу для третьих лиц с момента их государственной регистрации, а в случаях, установленных законом, - с момента уведомления органа, осуществляющего государственную регистрацию, о таких изменениях. Однако юридические лица и их учредители (участники) не вправе ссылаться на отсутствие регистрации таких изменений в отношениях с третьими лицами, действовавшими с учетом этих изменений.
+& Изменения учредительных документов приобретают силу для третьих лиц с момента их государственной регистрации, а в случаях, установленных законом, --- с момента уведомления органа, осуществляющего государственную регистрацию, о таких изменениях. Однако юридические лица и их учредители (участники) не вправе ссылаться на отсутствие регистрации таких изменений в отношениях с третьими лицами, действовавшими с учетом этих изменений.
 \eEasyList
 \subsubsection{{\bf Статья 53.} Органы юридического лица}
 \beginEasyList
@@ -142,7 +142,7 @@
 \subsubsection{{\bf Статья 54.} Наименование и место нахождения юридического лица}
 \beginEasyList
 & Юридическое лицо имеет свое наименование, содержащее указание на его организационно-правовую форму. Наименования некоммерческих организаций, а в предусмотренных законом случаях наименования коммерческих организаций должны содержать указание на характер деятельности юридического лица.
-& Место нахождения юридического лица определяется местом его государственной регистрации. Государственная регистрация юридического лица осуществляется по месту нахождения его постоянно действующего исполнительного органа, а в случае отсутствия постоянно действующего исполнительного органа - иного органа или лица, имеющих право действовать от имени юридического лица без доверенности.
+& Место нахождения юридического лица определяется местом его государственной регистрации. Государственная регистрация юридического лица осуществляется по месту нахождения его постоянно действующего исполнительного органа, а в случае отсутствия постоянно действующего исполнительного органа --- иного органа или лица, имеющих право действовать от имени юридического лица без доверенности.
 & Наименование и место нахождения юридического лица указываются в его учредительных документах.
 & Юридическое лицо, являющееся коммерческой организацией, должно иметь фирменное наименование.
 \par Требования к фирменному наименованию устанавливаются настоящим Кодексом и другими законами. Права на фирменное наименование определяются в соответствии с правилами \uline{раздела VII} настоящего Кодекса.
@@ -191,14 +191,14 @@
 \beginEasyList
 & Юридическое лицо в течение трех рабочих дней после даты принятия решения о его реорганизации обязано в письменной форме сообщить в орган, осуществляющий государственную регистрацию юридических лиц, о начале процедуры реорганизации с указанием формы реорганизации. В случае участия в реорганизации двух и более юридических лиц такое уведомление направляется юридическим лицом, последним принявшим решение о реорганизации либо определенным решением о реорганизации. На основании данного уведомления орган, осуществляющий государственную регистрацию юридических лиц, вносит в единый государственный реестр юридических лиц запись о том, что юридическое лицо (юридические лица) находится (находятся) в процессе реорганизации.
 \par Реорганизуемое юридическое лицо после внесения в единый государственный реестр юридических лиц записи о начале процедуры реорганизации дважды с периодичностью один раз в месяц помещает в средствах массовой информации, в которых опубликовываются данные о государственной регистрации юридических лиц, уведомление о своей реорганизации. В случае участия в реорганизации двух и более юридических лиц уведомление о реорганизации опубликовывается от имени всех участвующих в реорганизации юридических лиц юридическим лицом, последним принявшим решение о реорганизации либо определенным решением о реорганизации. В уведомлении о реорганизации указываются сведения о каждом участвующем в реорганизации, создаваемом (продолжающем деятельность) в результате реорганизации юридическом лице, форма реорганизации, описание порядка и условий заявления кредиторами своих требований, иные сведения, предусмотренные законом.
-& Кредитор юридического лица, если его права требования возникли до опубликования уведомления о реорганизации юридического лица, вправе потребовать досрочного исполнения соответствующего обязательства должником, а при невозможности досрочного исполнения - прекращения обязательства и возмещения связанных с этим убытков, за исключением случаев, установленных законом.
-& Кредитор юридического лица - открытого акционерного общества, реорганизуемого в форме слияния, присоединения или преобразования, если его права требования возникли до опубликования сообщения о реорганизации юридического лица, вправе в судебном порядке потребовать досрочного исполнения обязательства, должником по которому является это юридическое лицо, или прекращения обязательства и возмещения убытков в случае, если реорганизуемым юридическим лицом, его участниками или третьими лицами не предоставлено достаточное обеспечение исполнения соответствующих обязательств.
+& Кредитор юридического лица, если его права требования возникли до опубликования уведомления о реорганизации юридического лица, вправе потребовать досрочного исполнения соответствующего обязательства должником, а при невозможности досрочного исполнения --- прекращения обязательства и возмещения связанных с этим убытков, за исключением случаев, установленных законом.
+& Кредитор юридического лица --- открытого акционерного общества, реорганизуемого в форме слияния, присоединения или преобразования, если его права требования возникли до опубликования сообщения о реорганизации юридического лица, вправе в судебном порядке потребовать досрочного исполнения обязательства, должником по которому является это юридическое лицо, или прекращения обязательства и возмещения убытков в случае, если реорганизуемым юридическим лицом, его участниками или третьими лицами не предоставлено достаточное обеспечение исполнения соответствующих обязательств.
 \par Указанные в настоящем пункте требования могут быть предъявлены кредиторами не позднее 30 дней с даты последнего опубликования уведомления о реорганизации юридического лица.
 \par Требования, заявляемые кредиторами, не влекут приостановления действий, связанных с реорганизацией.
 & В случае, если требования о досрочном исполнении или прекращении обязательств и возмещении убытков удовлетворены после завершения реорганизации, вновь созданные в результате реорганизации (продолжающие деятельность) юридические лица несут солидарную ответственность по обязательствам реорганизованного юридического лица.
 & Исполнение реорганизуемым юридическим лицом обязательств перед кредиторами обеспечивается в порядке, установленном настоящим Кодексом.
-\par В случае, если обязательства перед кредиторами реорганизуемого юридического лица - должника обеспечены залогом, такие кредиторы не вправе требовать предоставления дополнительного обеспечения.
-& Особенности реорганизации кредитных организаций, включая порядок уведомления органа, осуществляющего государственную регистрацию, о начале процедуры реорганизации кредитной организации, порядок уведомления кредиторов реорганизуемых кредитных организаций, порядок предъявления кредиторами требований о досрочном исполнении или прекращении соответствующих обязательств и возмещении убытков, а также порядок раскрытия информации, затрагивающей финансово-хозяйственную деятельность реорганизуемой кредитной организации, определяются законами, регулирующими деятельность кредитных организаций. При этом положения \uline{пунктов 1 - 5} настоящей статьи к кредитным организациям не применяются.
+\par В случае, если обязательства перед кредиторами реорганизуемого юридического лица --- должника обеспечены залогом, такие кредиторы не вправе требовать предоставления дополнительного обеспечения.
+& Особенности реорганизации кредитных организаций, включая порядок уведомления органа, осуществляющего государственную регистрацию, о начале процедуры реорганизации кредитной организации, порядок уведомления кредиторов реорганизуемых кредитных организаций, порядок предъявления кредиторами требований о досрочном исполнении или прекращении соответствующих обязательств и возмещении убытков, а также порядок раскрытия информации, затрагивающей финансово-хозяйственную деятельность реорганизуемой кредитной организации, определяются законами, регулирующими деятельность кредитных организаций. При этом положения \uline{пунктов 1--5} настоящей статьи к кредитным организациям не применяются.
 \eEasyList
 \subsubsection{{\bf Статья 61.} Ликвидация юридического лица}
 \beginEasyList
@@ -228,9 +228,9 @@
 \par В случае недостаточности имущества ликвидируемого юридического лица для удовлетворения требований кредиторов либо при наличии признаков банкротства юридического лица ликвидационная комиссия обязана обратиться в арбитражный суд с заявлением о банкротстве юридического лица.
 & Выплата денежных сумм кредиторам ликвидируемого юридического лица производится ликвидационной комиссией в порядке очередности, установленной \uline{статьей 64} настоящего Кодекса, в соответствии с промежуточным ликвидационным балансом, начиная со дня его утверждения, за исключением кредиторов третьей и четвертой очереди, выплаты которым производятся по истечении месяца со дня утверждения промежуточного ликвидационного баланса.
 & После завершения расчетов с кредиторами ликвидационная комиссия составляет ликвидационный баланс, который утверждается учредителями (участниками) юридического лица или органом, принявшими решение о ликвидации юридического лица. В случаях, установленных законом, ликвидационный баланс утверждается по согласованию с уполномоченным государственным органом.
-& При недостаточности у ликвидируемого казенного предприятия имущества, а у ликвидируемого учреждения - денежных средств для удовлетворения требований кредиторов последние вправе обратиться в суд с иском об удовлетворении оставшейся части требований за счет собственника имущества этого предприятия или учреждения.
+& При недостаточности у ликвидируемого казенного предприятия имущества, а у ликвидируемого учреждения --- денежных средств для удовлетворения требований кредиторов последние вправе обратиться в суд с иском об удовлетворении оставшейся части требований за счет собственника имущества этого предприятия или учреждения.
 & Оставшееся после удовлетворения требований кредиторов имущество юридического лица передается его учредителям (участникам), имеющим вещные права на это имущество или обязательственные права в отношении этого юридического лица, если иное не предусмотрено законом, иными правовыми актами или учредительными документами юридического лица.
-& Ликвидация юридического лица считается завершенной, а юридическое лицо - прекратившим существование после внесения об этом записи в единый государственный реестр юридических лиц.
+& Ликвидация юридического лица считается завершенной, а юридическое лицо --- прекратившим существование после внесения об этом записи в единый государственный реестр юридических лиц.
 \eEasyList
 \subsubsection{{\bf Статья 64.} Удовлетворение требований кредиторов}
 \beginEasyList
@@ -370,7 +370,7 @@
 \subsection{{\bf 3. Товарищество на вере}}
 \subsubsection{{\bf Статья 82.} Основные положения о товариществе на вере}
 \beginEasyList
-& Товариществом на вере (коммандитным товариществом) признается товарищество, в котором наряду с участниками, осуществляющими от имени товарищества предпринимательскую деятельность и отвечающими по обязательствам товарищества своим имуществом (полными товарищами), имеется один или несколько участников - вкладчиков (коммандитистов), которые несут риск убытков, связанных с деятельностью товарищества, в пределах сумм внесенных ими вкладов и не принимают участия в осуществлении товариществом предпринимательской деятельности.
+& Товариществом на вере (коммандитным товариществом) признается товарищество, в котором наряду с участниками, осуществляющими от имени товарищества предпринимательскую деятельность и отвечающими по обязательствам товарищества своим имуществом (полными товарищами), имеется один или несколько участников --- вкладчиков (коммандитистов), которые несут риск убытков, связанных с деятельностью товарищества, в пределах сумм внесенных ими вкладов и не принимают участия в осуществлении товариществом предпринимательской деятельности.
 & Положение полных товарищей, участвующих в товариществе на вере, и их ответственность по обязательствам товарищества определяются правилами настоящего \uline{Кодекса} об участниках полного товарищества.
 & Лицо может быть полным товарищем только в одном товариществе на вере.
 \par Участник полного товарищества не может быть полным товарищем в товариществе на вере.
@@ -409,7 +409,7 @@
 \subsection{{\bf 3.1. Крестьянское (фермерское) хозяйство}}
 \subsubsection{{\bf Статья 86.1.} Крестьянское (фермерское) хозяйство}
 \beginEasyList
-& Граждане, ведущие совместную деятельность в области сельского хозяйства без образования юридического лица на основе соглашения о создании крестьянского (фермерского) хозяйства (\uline{статья 23}), вправе создать юридическое лицо - крестьянское (фермерское) хозяйство.
+& Граждане, ведущие совместную деятельность в области сельского хозяйства без образования юридического лица на основе соглашения о создании крестьянского (фермерского) хозяйства (\uline{статья 23}), вправе создать юридическое лицо --- крестьянское (фермерское) хозяйство.
 \par Крестьянским (фермерским) хозяйством, создаваемым в соответствии с настоящей статьей в качестве юридического лица, признается добровольное объединение граждан на основе членства для совместной производственной или иной хозяйственной деятельности в области сельского хозяйства, основанной на их личном участии и объединении членами крестьянского (фермерского) хозяйства имущественных вкладов.
 & Имущество крестьянского (фермерского) хозяйства принадлежит ему на праве собственности.
 & Гражданин может быть членом только одного крестьянского (фермерского) хозяйства, созданного в качестве юридического лица.
@@ -428,7 +428,7 @@
 \eEasyList
 \subsubsection{{\bf Статья 88.} Участники общества с ограниченной ответственностью}
 \beginEasyList
-& Число участников общества с ограниченной ответственностью не должно превышать предела, установленного законом об обществах с ограниченной ответственностью. В противном случае оно подлежит преобразованию в акционерное общество в течение года, а по истечении этого срока - ликвидации в судебном порядке, если число его участников не уменьшится до установленного законом предела.
+& Число участников общества с ограниченной ответственностью не должно превышать предела, установленного законом об обществах с ограниченной ответственностью. В противном случае оно подлежит преобразованию в акционерное общество в течение года, а по истечении этого срока --- ликвидации в судебном порядке, если число его участников не уменьшится до установленного законом предела.
 & Общество с ограниченной ответственностью может быть учреждено одним лицом или может состоять из одного лица, в том числе при создании в результате реорганизации.
 \par Общество с ограниченной ответственностью не может иметь в качестве единственного участника другое хозяйственное общество, состоящее из одного лица.
 \eEasyList
@@ -516,7 +516,7 @@
 \par Открытое акционерное общество обязано ежегодно публиковать для всеобщего сведения годовой отчет, бухгалтерский баланс, счет прибылей и убытков.
 & Акционерное общество, акции которого распределяются только среди его учредителей или иного заранее определенного круга лиц, признается закрытым акционерным обществом. Такое общество не вправе проводить открытую подписку на выпускаемые им акции либо иным образом предлагать их для приобретения неограниченному кругу лиц.
 \par Акционеры закрытого акционерного общества имеют преимущественное право приобретения акций, продаваемых другими акционерами этого общества.
-\par Число участников закрытого акционерного общества не должно превышать числа, установленного законом об акционерных обществах, в противном случае оно подлежит преобразованию в открытое акционерное общество в течение года, а по истечении этого срока - ликвидации в судебном порядке, если их число не уменьшится до установленного законом предела.
+\par Число участников закрытого акционерного общества не должно превышать числа, установленного законом об акционерных обществах, в противном случае оно подлежит преобразованию в открытое акционерное общество в течение года, а по истечении этого срока --- ликвидации в судебном порядке, если их число не уменьшится до установленного законом предела.
 \par В случаях, предусмотренных законом об акционерных обществах, закрытое акционерное общество может быть обязано публиковать для всеобщего сведения документы, указанные в \uline{пункте 1} настоящей статьи.
 \eEasyList
 \subsubsection{{\bf Статья 98.} Образование акционерного общества}
@@ -625,7 +625,7 @@
 & Имущество, находящееся в собственности производственного кооператива, делится на паи его членов в соответствии с уставом кооператива.
 \par Уставом кооператива может быть установлено, что определенная часть принадлежащего кооперативу имущества составляет неделимые фонды, используемые на цели, определяемые уставом.
 \par Решение об образовании неделимых фондов принимается членами кооператива единогласно, если иное не предусмотрено уставом кооператива.
-& Член кооператива обязан внести к моменту регистрации кооператива не менее десяти процентов паевого взноса, а остальную часть - в течение года с момента регистрации.
+& Член кооператива обязан внести к моменту регистрации кооператива не менее десяти процентов паевого взноса, а остальную часть --- в течение года с момента регистрации.
 & Кооператив не вправе выпускать акции.
 & Прибыль кооператива распределяется между его членами в соответствии с их трудовым участием, если иной порядок не предусмотрен законом и уставом кооператива.
 \par В таком же порядке распределяется имущество, оставшееся после ликвидации кооператива и удовлетворения требований его кредиторов.
