--- a/assets/ref_gk_rest.tex
+++ b/assets/ref_gk_rest.tex
@@ -16,6 +16,7 @@
     \newcommand{\eEasyList}{\end{easylist}}
     \setcounter{secnumdepth}{-2}
 \begin{document}
+\setcounter{page}{2}
 
 \section{{\bf Раздел I. Общие положения}}
 \section{{\bf Подраздел 2. Лица}}
