--- a/assets/ref_nk_rest.tex
+++ b/assets/ref_nk_rest.tex
@@ -16,6 +16,7 @@
     \newcommand{\eEasyList}{\end{easylist}}
     \setcounter{secnumdepth}{-2}
 \begin{document}
+\setcounter{page}{2}
 
 \section{{\bf Раздел II. Налогоплательщики и плательщики сборов.}\\{\bf Налоговые агенты. Представительство в налоговых правоотношениях}}
 \subsection{{\bf Глава 3. Налогоплательщики и плательщики сборов. Налоговые агенты}}
