Improve NK title page

--- a/assets/ref_nk.tex
+++ b/assets/ref_nk.tex
@@ -27,6 +27,7 @@
     Специализированный учебно-научный центр\\
 
     \vfill
+    \textbf{Права и обязанности налогоплательщика}\\
     \textbf{Реферативный обзор}\\
     статей (19--45, 52, 80--81) Налогового кодекса РФ\\
     $ofStudentOf$ 11 $group$ класса $name$\\
