--- a/assets/ref_nk.tex
+++ b/assets/ref_nk.tex
@@ -1,8 +1,8 @@
-\documentclass[a4page]{report}
+\documentclass{report}
+    \usepackage[a4paper,margin=2cm]{geometry}
     \usepackage[utf8]{inputenc}
     \usepackage[T2A]{fontenc}
     \usepackage[russian]{babel}
-    \usepackage{fullpage}
     \usepackage{indentfirst}
     \setlength{\parindent}{0pt}
     \usepackage{textcomp}
