--- a/assets/ref_nk_title.tex
+++ b/assets/ref_nk_title.tex
@@ -1,13 +1,12 @@
-\documentclass[a4page]{report}
+\documentclass{report}
+    \usepackage[a4paper,margin=2cm]{geometry}
     \usepackage[utf8]{inputenc}
     \usepackage[T2A]{fontenc}
     \usepackage[russian]{babel}
-    \usepackage{fullpage}
     \usepackage{indentfirst}
     \setlength{\parindent}{0pt}
     \usepackage{textcomp}
     \usepackage[normalem]{ulem}
-    \setcounter{secnumdepth}{-2}
 \begin{document}
 \begin{titlepage}
     \center
