Group is now a text field

--- a/assets/ref_gk_title.tex
+++ b/assets/ref_gk_title.tex
@@ -20,7 +20,7 @@
     \vfill
     \textbf{Реферативный обзор}\\
     статей (17--18, 23--28, 48--123) Гражданского кодекса РФ\\
-    $ofStudentOf$ 11 $group$ класса $name$\\
+    $ofStudentOf$ $group$ класса $name$\\
 
     \vfill
     {Екатеринбург}\\
