--- a/assets/ref_nk_title.tex
+++ b/assets/ref_nk_title.tex
@@ -21,7 +21,7 @@
     \textbf{Права и обязанности налогоплательщика}\\
     \textbf{Реферативный обзор}\\
     статей (19--45, 52, 80--81) Налогового кодекса РФ\\
-    $ofStudentOf$ 11 $group$ класса $name$\\
+    $ofStudentOf$ $group$ класса $name$\\
 
     \vfill
     {Екатеринбург}\\
